Fix custom badge colors in admin
broken in #4346

--- a/app/assets/stylesheets/active_admin.sass
+++ b/app/assets/stylesheets/active_admin.sass
@@ -255,3 +255,8 @@ body.active_admin nav.pagination
       margin-right: 0.2rem
     //span
     //  display: contents
+
+.label
+  padding: 0.2rem
+  text-align: center
+  border: 1px solid
